- Serialisering av brukers billetter - Enkle tester av serialisering - formattering